--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,6 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 # IDE0032: Use auto property
 dotnet_style_prefer_auto_properties = true:none
+
+# 'using' directive preferences
+csharp_using_directive_placement = inside_namespace:error
